MDEV-5906: Thread status not changed when applying log events

sql/log_event.cc:
  Added THD_STAGE_INFO when applying row events